# nbody-simulation

./: .gitignore  CMakeLists.txt  flake.nix
.cache/clangd/index/: analytics.cpp.8D6B2FF68FC1EF7A.idx  analytics.h.673FE2A45114EA30.idx  binary_to_compressed_c.cpp.559294D426E57E31.idx  binary_to_compressed_c.cpp.EFF9A62DE2600442.idx  datatypes.h.0B2F03BC4D4272E6.idx  imconfig.h.42A7DAEE403CDD41.idx  imconfig.h.995C6C2492D8A643.idx  imgui.cpp.671B56DE7BA710F8.idx  imgui.cpp.BA83CC7EDB3AEEE7.idx  imgui.h.87B36C879FC919DA.idx  imgui.h.C257C32E94601364.idx  imgui_demo.cpp.3135B64E9D0B961D.idx  imgui_demo.cpp.78F02FEB02C1182F.idx  imgui_draw.cpp.E875A6094B85E135.idx  imgui_draw.cpp.FADED655E7FDB442.idx  imgui_freetype.cpp.A110D005CC0AFE90.idx  imgui_freetype.cpp.EBB3D33F845A7EA1.idx  imgui_freetype.h.94FE950924B79D57.idx  imgui_freetype.h.E60B2C90A31C8BDA.idx  imgui_impl_allegro5.cpp.3E44D6A4F2F39F4C.idx  imgui_impl_allegro5.cpp.436B91973B57E31F.idx  imgui_impl_allegro5.h.12B755C1AD4AC591.idx  imgui_impl_allegro5.h.1F86E808059DDCAE.idx  imgui_impl_android.cpp.01D8050BAEF69028.idx  imgui_impl_android.cpp.B55A6CBB2254A4F3.idx  imgui_impl_android.h.421E9278644D7486.idx  imgui_impl_android.h.6404ACA6826842AE.idx  imgui_impl_dx10.cpp.534D036C34FDD87D.idx  imgui_impl_dx10.cpp.C86F3725A736E957.idx  imgui_impl_dx10.h.49354E39D7E0736E.idx  imgui_impl_dx10.h.F673AF382B866EA6.idx  imgui_impl_dx11.cpp.4DFCC1A045F3B8C5.idx  imgui_impl_dx11.cpp.749556D1E06EF438.idx  imgui_impl_dx11.h.7ECEEEA28E697512.idx  imgui_impl_dx11.h.B985A65125E62F7A.idx  imgui_impl_dx12.cpp.2979E9CC44D3E208.idx  imgui_impl_dx12.cpp.6B11C773C29C5CAA.idx  imgui_impl_dx12.h.476E6E5D6610E6E4.idx  imgui_impl_dx12.h.9686E875611B63A6.idx  imgui_impl_dx9.cpp.D564AD6B9C987A36.idx  (+134 more)
src/: analytics.h  datatypes.h  general_simulation_generators.hpp  integration_schemes.cpp  integration_schemes.h  integration_signitures.h  integrator.cpp  integrator.h  main.cpp  preprocessorDefinitions.h  primitiveDatatypes.h  running_sim_signitures.h  simulation_description.h  simulation_generator_functions.hpp  simulation_library.h  test_main.cpp
tests/: CMakeLists.txt
